--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
+    "react-select": "^5.7.4",
     "serve": "^14.2.4",
     "uuid": "^11.1.0",
     "zustand": "^5.0.6"
